// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelloEvent组件 测试组件渲染 1`] = `
<div>
  <h3>
    HelloEvent
  </h3>
  <button>
    点击我
  </button>
</div>
`;

exports[`HelloEvent组件 测试组件渲染-传了click方法 1`] = `
<div>
  <h3>
    HelloEvent
  </h3>
  <button
    onClick={[Function]}
  >
    点击我
  </button>
</div>
`;
